syntax = "proto3";

package com.example.applicationtier;

service ProductService {
    rpc AddProduct(ProductRequest) returns (ProductResponse);
    rpc GetProductInfo(ProductRequest) returns (ProductResponse);
}

message ProductRequest {
    string productId = 1;
    string productName = 2;
    double price = 3;
}

message ProductResponse {
    string productId = 1;
    string productName = 2;
    double price = 3;
}
